[project]
name = "site"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "causalinference>=0.1.3",
    "doubleml>=0.10.1",
    "ipython>=9.6.0",
    "ivmodels>=0.9.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "lightgbm>=4.6.0",
    "linearmodels>=6.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "patsy>=1.0.1",
    "ptpython>=3.0.31",
    "pyfixest>=0.30.2",
    "pyvis>=0.3.2",
    "rdrobust>=1.3.0",
    "scikit-learn>=1.7.2",
    "scpi-pkg>=3.0.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.9.0",
]
